kube/components/opa/opa-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:latest
          args:
            - "run"
            - "--server"
            - "--config-file=/etc/opa/config.yaml"
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: opa-policy
              mountPath: /policy
            - name: opa-config
              mountPath: /etc/opa
      volumes:
        - name: opa-policy
          configMap:
            name: opa-policy
        - name: opa-config
          configMap:
            name: opa-config
