kube/components/opa/opa-service.yml
apiVersion: v1
kind: Service
metadata:
  name: opa
spec:
  type: NodePort
  ports:
    - port: 8181
      targetPort: 8181
      nodePort: 30081
      protocol: TCP
  selector:
    app: opa
